--- a/products.html
+++ b/products.html
@@ -133,11 +133,11 @@
               media="(min-width: 1440px)" />
               <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
-              media="(min-width: 744px) and (max-width: 1439px)" />
-              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor_-mob-1x-min_dss4mb.png 1x,
-              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor-mob-2x-min_ekgxbq.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402994/apero/products/popcorn/corn-micro-cheese-mob-1x-min_zps6ku.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402995/apero/products/popcorn/corn-micro-cheese-mob-2x-min_amogce.png 2x" 
               media="(max-width: 743px)"/>
-             <img  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor_-mob-1x-min_dss4mb.png"  alt="production"  /> -->
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402994/apero/products/popcorn/corn-micro-cheese-mob-1x-min_zps6ku.png"  alt="production"  />
             </picture>
                <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/popcorn/popcorn-cheese.png" alt="" width="201" height="315"> -->
                <p class="subtitle product__list-subtitle">Попкорн зі смаком сиру</p>
@@ -146,7 +146,20 @@
                  <p class="text product__list-text">Фасування: ?? шт</p>
                </div>
               </li>
+
            <li class="list product__list popcorn__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243812/apero/products/popcorn/corn-micro-desktop-1x-min_pybjrb.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243814/apero/products/popcorn/corn-micro-desktop-2x-min_wmp3ar.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402992/apero/products/popcorn/corn-micro-caramel-mob-1x-min_trkhnl.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402993/apero/products/popcorn/corn-micro-caramel-mob-2x-min_jjfjxo.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402992/apero/products/popcorn/corn-micro-caramel-mob-1x-min_trkhnl.png"  alt="production"  />
+            </picture>
                <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/popcorn/popcorn-caramel.png" alt=""> -->
                <p class="subtitle product__list-subtitle">Попкорн з ароматом карамелі</p>
                <div class="product__text-container">
@@ -154,7 +167,20 @@
                 <p class="text product__list-text">Фасування: ?? шт</p>
               </div>
               </li>
+
            <li class="list product__list popcorn__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243816/apero/products/popcorn/corn-micro-salt-desktop-1x-min_e8kjxn.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243817/apero/products/popcorn/corn-micro-salt-desktop-2x-min_dieor3.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402997/apero/products/popcorn/corn-micro-salt-mob-1x-min_zvdrys.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402998/apero/products/popcorn/corn-micro-salt-mob-2x-min_k31sck.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402997/apero/products/popcorn/corn-micro-salt-mob-1x-min_zvdrys.png"  alt="production"  />
+            </picture>
                <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/popcorn/popcorn-salty.png" alt=""> -->
                <p class="subtitle product__list-subtitle">Попкорн з сіллю</p>
                <div class="product__text-container">
@@ -163,6 +189,18 @@
               </div>
               </li>
            <li class="list product__list popcorn__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243806/apero/products/popcorn/corn-micro-butter-desktop-1x-min_k1htch.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243808/apero/products/popcorn/corn-micro-butter-desktop-2x-min_tvx17d.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402989/apero/products/popcorn/corn-micro-butter-mob-1x-min_sy8tzi.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402991/apero/products/popcorn/corn-micro-butter-mob-2x-min_psro52.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402989/apero/products/popcorn/corn-micro-butter-mob-1x-min_sy8tzi.png"  alt="production"  />
+            </picture>
                <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/popcorn/popcorn-butter.png" alt=""> -->
                <p class="subtitle product__list-subtitle">Попкорн з ароматом  вершкового масла</p>
                <div class="product__text-container">
@@ -171,6 +209,18 @@
               </div>
               </li>
            <li class="list product__list popcorn__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243803/apero/products/popcorn/corn-bar-desktop-1x-min_emvoxf.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243805/apero/products/popcorn/corn-bar-desktop-2x-min_ncxm0y.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402986/apero/products/popcorn/corn-bar-mob-1x-min_brjw1l.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402988/apero/products/popcorn/corn-bar-mob-2x-min_mmq0dy.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402986/apero/products/popcorn/corn-bar-mob-1x-min_brjw1l.png"  alt="production"  />
+            </picture>
                <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/popcorn/popcorn-1.png" alt=""> -->
                <p class="subtitle product__list-subtitle">Кукурудзяні баранці глазуровані</p>
                <div class="product__text-container">
@@ -179,6 +229,18 @@
               </div>
               </li>
            <li class="list product__list popcorn__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243822/apero/products/popcorn/corn-rice-desktop-1x-min_pdq0of.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243824/apero/products/popcorn/corn-rice-desktop-2x-min_pvjdnm.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403001/apero/products/popcorn/corn-rice-mob-1x-min_w9x24d.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403003/apero/products/popcorn/corn-rice-mob-2x-min_jt91rz.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403001/apero/products/popcorn/corn-rice-mob-1x-min_w9x24d.png"  alt="production"  />
+            </picture>
                <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/popcorn/popcorn-2.png" alt=""> -->
                <p class="subtitle product__list-subtitle">Повтряні зерна рису глазуровані</p>
                <div class="product__text-container">
@@ -187,6 +249,18 @@
               </div>
               </li>
            <li class="list product__list popcorn__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243819/apero/products/popcorn/corn-r-cheese-desktop-1x-min_gb1gpq.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243820/apero/products/popcorn/corn-r-cheese-desktop-2x-min_kvfday.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402999/apero/products/popcorn/corn-r-cheese-mob-1x-min_kkwxab.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403000/apero/products/popcorn/corn-r-cheese-mob-2x-min_vvfab0.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402999/apero/products/popcorn/corn-r-cheese-mob-1x-min_kkwxab.png"  alt="production"  />
+            </picture>
                <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/popcorn/popcorn-ready-cheese.png" alt=""> -->
                <p class="subtitle product__list-subtitle">Готовий попкорн зі смаком сиру</p>
                <div class="product__text-container">
