add images mob version

--- a/products.html
+++ b/products.html
@@ -269,6 +269,18 @@
               </div>
               </li>
            <li class="list product__list popcorn__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243825/apero/products/popcorn/corn-r-salt-desktop-1x-min_ltt0ea.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243827/apero/products/popcorn/corn-r-salt-desktop-2x-min_q1vv9k.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403004/apero/products/popcorn/corn-r-salt-mob-1x-min_y32cih.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403005/apero/products/popcorn/corn-r-salt-mob-2x-min_vxceaf.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403004/apero/products/popcorn/corn-r-salt-mob-1x-min_y32cih.png"  alt="production"  />
+            </picture>
                <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/popcorn/popcorn-ready-salty.png" alt=""> -->
                <p class="subtitle product__list-subtitle">Готовий попкорн з сіллю</p>
                <div class="product__text-container">
@@ -278,6 +290,18 @@
               </li>
 
            <li class="list product__list snacks__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243596/apero/products/snex/snack-smetana-desktop-1x-min_pyqzsl.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243597/apero/products/snex/snack-smetana-desktop-2x-min_be5aus.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403050/apero/products/snex/snack-smetana-mob-1x-min_hqmqhy.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403052/apero/products/snex/snack-smetana-mob-2x-min_ye5tr7.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403050/apero/products/snex/snack-smetana-mob-1x-min_hqmqhy.png"  alt="production"  />
+            </picture>
                 <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/snex/snacks-onion.png" alt=""> -->
                 <p class="subtitle product__list-subtitle">Цибулине кільце зі смаком сметани та зелені</p>
                <div class="product__text-container">
@@ -286,6 +310,18 @@
               </div>
            </li>
            <li class="list product__list snacks__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243589/apero/products/snex/snack-bacon-desktop-1x-min_ttr6cb.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243590/apero/products/snex/snack-bacon-desktop-2x-min_ntgngq.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403041/apero/products/snex/snack-bacon-mob-1x-min_uitk4c.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403043/apero/products/snex/snack-bacon-mob-2x-min_vainxh.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403041/apero/products/snex/snack-bacon-mob-1x-min_uitk4c.png"  alt="production"  />
+            </picture>
                 <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/snex/shacks-bacon1.png" alt=""> -->
                 <p class="subtitle product__list-subtitle">Полоски зі смаком бекону</p>
                <div class="product__text-container">
@@ -294,22 +330,58 @@
               </div>
               </li>
            <li class="list product__list snacks__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243590/apero/products/snex/snack-kalmar-desktop-1x-min_gxlepc.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243592/apero/products/snex/snack-kalmar-desktop-2x-min_ll7ozv.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403045/apero/products/snex/snack-kalmar-mob-1x-min_ihjhhj.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403046/apero/products/snex/snack-kalmar-mob-2x-min_wpmyzj.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403045/apero/products/snex/snack-kalmar-mob-1x-min_ihjhhj.png"  alt="production"  />
+            </picture>
                 <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/snex/shacks1.png" alt=""> -->
-                <p class="subtitle product__list-subtitle">Полоски зі смаком бекону</p>
+                <p class="subtitle product__list-subtitle">Кільце кальмара</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 50 г</p>
                 <p class="text product__list-text">Фасування: 20 шт</p>
               </div>
               </li>
            <li class="list product__list snacks__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243593/apero/products/snex/snack-ketchup-desktop-1x-min_wiemaf.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243594/apero/products/snex/snack-ketchup-desktop-2x-min_wosofm.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403047/apero/products/snex/snack-ketchup-mob-1x-min_rturef.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403049/apero/products/snex/snack-ketchup-mob-2x-min_jbo4cw.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403047/apero/products/snex/snack-ketchup-mob-1x-min_rturef.png"  alt="production"  />
+            </picture>
                <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/snex/shacks2.png" alt=""> -->
-                <p class="subtitle product__list-subtitle">Цибулине кільце зі смаком сметани та зелені</p>
+                <p class="subtitle product__list-subtitle">Фритка зі смаком кетчупу</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 50 г</p>
                 <p class="text product__list-text">Фасування: 20 шт</p>
               </div>
               </li>
            <li class="list product__list snacks__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243936/apero/products/suharyky/baget-crab-desktop-1x-min_nn9hao.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243938/apero/products/suharyky/baget-crab-desktop-2x-min_c44dv3.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403089/apero/products/suharyky/baget-crab-mob-1x-min_kmgfmt.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403091/apero/products/suharyky/baget-crab-mob-2x-min_oozbnj.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403089/apero/products/suharyky/baget-crab-mob-1x-min_kmgfmt.png"  alt="production"  />
+            </picture>
                <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/snex/baget-crab.png" alt=""> -->
                 <p class="subtitle product__list-subtitle">Багет пшеничний зі смаком краба</p>
                <div class="product__text-container">
@@ -318,6 +390,18 @@
               </div>
               </li>
            <li class="list product__list snacks__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243947/apero/products/suharyky/baget-souse-desktop-1x-min_bpzkky.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243949/apero/products/suharyky/baget-souse-desktop-2x-min_foyfq8.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403099/apero/products/suharyky/baget-souse-mob-1x-min_nk1orl.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403100/apero/products/suharyky/baget-souse-mob-2x-min_qhszil.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403099/apero/products/suharyky/baget-souse-mob-1x-min_nk1orl.png"  alt="production"  />
+            </picture>
                <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/snex/baget-cream.png" alt=""> -->
                 <p class="subtitle product__list-subtitle">Багет житньо-пшеничний зі смаком сметани та зелені</p>
                <div class="product__text-container">
@@ -326,6 +410,18 @@
               </div>
               </li>
            <li class="list product__list snacks__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243939/apero/products/suharyky/baget-ketchup-desktop-1x-min_aptmop.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243941/apero/products/suharyky/baget-ketchup-desktop-2x-min_l4cbbt.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403093/apero/products/suharyky/baget-ketchup-mob-1x-min_zj3epu.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403094/apero/products/suharyky/baget-ketchup-mob-2x-min_rhx3fn.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403093/apero/products/suharyky/baget-ketchup-mob-1x-min_zj3epu.png"  alt="production"  />
+            </picture>
                <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/snex/baget-ketchup.png" alt=""> -->
                 <p class="subtitle product__list-subtitle">Сухарик пшеничний зі смаком кетчупу</p>
                <div class="product__text-container">
@@ -334,6 +430,18 @@
               </div>
               </li>
            <li class="list product__list snacks__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243943/apero/products/suharyky/baget-sos-desktop-1x-min_v4mbny.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243945/apero/products/suharyky/baget-sos-desktop-2x-min_mrdbbz.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403096/apero/products/suharyky/baget-sos-mob-1x-min_msgvjt.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403097/apero/products/suharyky/baget-sos-mob-2x-min_irdcnl.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403096/apero/products/suharyky/baget-sos-mob-1x-min_msgvjt.png"  alt="production"  />
+            </picture>
                <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/snex/baget-sausages.png" alt=""> -->
                 <p class="subtitle product__list-subtitle">Сухарик житній зі смаком мисливських </br> ковбасок</p>
                <div class="product__text-container">
@@ -343,6 +451,18 @@
               </li>
 
            <li class="list product__list buds__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243943/apero/products/suharyky/baget-sos-desktop-1x-min_v4mbny.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243945/apero/products/suharyky/baget-sos-desktop-2x-min_mrdbbz.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" /> -->
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403096/apero/products/suharyky/baget-sos-mob-1x-min_msgvjt.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403097/apero/products/suharyky/baget-sos-mob-2x-min_irdcnl.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403096/apero/products/suharyky/baget-sos-mob-1x-min_msgvjt.png"  alt="production"  />
+            </picture>
             <!-- <img class="product__list-image"  src="https://res.cloudinary.com/ddtdtthqh/apero/products/corn_pads/twin-strawberry.png" alt=""> -->
           <p class="subtitle product__list-subtitle">Подушки кукурудзяні X-TWIN зі смаком полуниці</p>
                <div class="product__text-container">
