--- a/contacts.html
+++ b/contacts.html
@@ -40,7 +40,7 @@
          <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
        </svg>
      </button>
-      <button type="button" class="header__button header__button-second modal-open">Отримати пропозицію</button>
+      <button type="button" class="button__primary header__button-second modal-open">Отримати пропозицію</button>
 
     </div>
  </header>
@@ -202,7 +202,7 @@
       <div class="footer__information-item">
         <p class="subtitle white footer__question-subtitle">Маєте запитання чи пропозиції?</p>
         <p class="text white">Заповніть заявку і ми зв’яжемось з Вами </br>найближчим часом</p>
-        <button class="button footer__button modal-open">Заповнити заявку</button>
+        <button class="button__secondary footer__button modal-open">Заповнити заявку</button>
       </div>
     </div>
 
@@ -237,7 +237,7 @@
           <input class="question__input text black" type="text" name="company" id="company" placeholder="Назва компанії">
           <textarea class="question__textarea text black" name="comment" id="comment" cols="30" rows="10" placeholder="Напишіть щось"></textarea>
         </div>
-        <button class="button question__button"  type="submit">Відправити заявку</button>
+        <button class="button__secondary question__button"  type="submit">Відправити заявку</button>
        
         
       </form>
