--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
           </svg>
         </button>
-        <button type="button" class="header__button button__form modal-open">Отримати пропозицію</button>
+        <button type="button" class="button__primary header__button button__form modal-open">Отримати пропозицію</button>
    </header>
 
    <main>
@@ -346,7 +346,7 @@
                 <p class="text">Ми використовуємо індивідуальний підхід до кожного нашого клієнта</p>
             </li>
            </ul>
-           <button type="button" class="button advantage__button modal-open">Отримати пропозицію
+           <button type="button" class="button__secondary advantage__button modal-open">Отримати пропозицію
             <svg  width="40" height="40" class="button__image">
               <use href="./images/symbol-defs.svg#icon-arrow-up"></use>
             </svg>
@@ -508,7 +508,7 @@
             <input class="question__input text black" type="text" name="company" id="company" placeholder="Назва компанії" >
             <textarea class="question__textarea text black" name="comment" id="comment" cols="30" rows="10" placeholder="Напишіть щось"></textarea>
           </div>
-          <button class="button question__button" type="submit">Відправити заявку</button>
+          <button class="button__secondary question__button" type="submit">Відправити заявку</button>
         </form>
         <picture>
           <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/qustion-corn-desk-1x_pa5mli.png 1x,
@@ -576,7 +576,7 @@
         <div class="footer__information-item">
           <p class="subtitle white footer__question-subtitle">Маєте запитання чи пропозиції?</p>
           <p class="text white">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</p>
-          <button class="button footer__button modal-open">Заповнити заявку</button>
+          <button class="button__primary footer__button modal-open">Заповнити заявку</button>
         </div>
       </div>
 
@@ -611,7 +611,7 @@
              <input class="question__input text black" type="text" name="company" id="company" placeholder="Назва компанії">
              <textarea class="question__textarea text black" name="comment" id="comment" cols="30" rows="10" placeholder="Напишіть щось"></textarea>
            </div>
-           <button class="button question__button"  type="submit">Відправити заявку</button>
+           <button class="button__secondary question__button"  type="submit">Відправити заявку</button>
           
            
          </form>
