--- a/products.html
+++ b/products.html
@@ -39,7 +39,7 @@
          <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
        </svg>
      </button>
-      <button type="button" class="header__button header__button-second modal-open">Отримати пропозицію</button>
+      <button type="button" class="button__primary header__button-second modal-open">Отримати пропозицію</button>
 
     </div>
  </header>
@@ -964,7 +964,7 @@
     <div class="partner__container">
       <h2 class="title partners__title">Станьте нашим партнером сьогодні!</h2>
       <h3 class="subtitle partners__subtitle">Якщо Ви маєте запитання чи пропозиції - </br>заповніть заявку і ми звяжемось з Вами найближчим часом</h3>
-      <button type="button" class="button button__form partners__button modal-open">Стати партнером  
+      <button type="button" class="button__secondary button__form partners__button modal-open">Стати партнером  
         <svg width="40" height="40" class="hero-svg">
           <use href="./images/symbol-defs.svg#icon-arrow-up-right"></use>
         </svg>
@@ -1066,7 +1066,7 @@
       <div class="footer__information-item">
         <p class="subtitle white footer__question-subtitle">Маєте запитання чи пропозиції?</p>
         <p class="text white">Заповніть заявку і ми зв’яжемось з Вами </br>найближчим часом</p>
-        <button class="button footer__button modal-open">Заповнити заявку</button>
+        <button class="button__secondary footer__button modal-open">Заповнити заявку</button>
       </div>
     </div>
 
@@ -1101,7 +1101,7 @@
           <input class="question__input text black" type="text" name="company" id="company" placeholder="Назва компанії">
           <textarea class="question__textarea text black" name="comment" id="comment" cols="30" rows="10" placeholder="Напишіть щось"></textarea>
         </div>
-        <button class="button question__button"  type="submit">Відправити заявку</button>
+        <button class="button__secondary question__button"  type="submit">Відправити заявку</button>
        
         
       </form>
