hover and focus

--- a/products.html
+++ b/products.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-  <header class="header-container">
-    <div class="header header__second">
+  <!-- <header class="header-container"> -->
+    <header class="header header__second">
       <a href="./index.html" class="link"> 
         <svg class="logo" width="80" height="24">
           <use href="./images/symbol-defs.svg#icon-logo-black"></use>
@@ -41,7 +41,7 @@
      </button>
       <button type="button" class="button__primary header__button-second modal-open">Отримати пропозицію</button>
 
-    </div>
+    <!-- </div> -->
  </header>
 
  <main>
